--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
+    "@use-gesture/react": "^10.3.0",
     "@vercel/analytics": "^1.1.1",
+    "classnames": "^2.3.2",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
