--- a/package.json
+++ b/package.json
@@ -10,19 +10,27 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
+    "@react-three/drei": "9.88.6",
+    "@react-three/fiber": "^8.15.11",
+    "@react-three/postprocessing": "^2.15.11",
     "@use-gesture/react": "^10.3.0",
     "@vercel/analytics": "^1.1.1",
     "classnames": "^2.3.2",
-    "next": "14.0.2",
+    "immer": "^10.0.3",
+    "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.69.5",
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.6",
+    "three": "^0.158.0",
+    "three-stdlib": "^2.28.5",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.158.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
     "typescript": "^5"
