Update/ tsconfig.json ( "@hooks", "@public"  경로 추가 )

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,10 @@
     ],
     "baseUrl": ".",
     "paths": {
+      "@public/*": ["public/*"],
       "@app/*": ["src/app/*"],
       "@components/*": ["src/components/*"],
+      "@hooks/*": ["src/hooks/*"],
       "@utils/*": ["src/utils/*"]
     }
   },
