Change/ tsconfig.json ( lowerCase => upperCase )에 따른 코드 일괄 변경

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,11 +20,11 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@public/*": ["public/*"],
-      "@app/*": ["src/app/*"],
-      "@components/*": ["src/components/*"],
-      "@hooks/*": ["src/hooks/*"],
-      "@utils/*": ["src/utils/*"]
+      "@Public/*": ["public/*"],
+      "@App/*": ["src/app/*"],
+      "@Components/*": ["src/components/*"],
+      "@Hooks/*": ["src/hooks/*"],
+      "@Utils/*": ["src/utils/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
