--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
-    "@react-three/drei": "9.88.6",
+    "@react-three/drei": "^9.90.1",
     "@react-three/fiber": "^8.15.11",
     "@react-three/postprocessing": "^2.15.11",
     "@use-gesture/react": "^10.3.0",
